--- a/abinash/Template_8/Task_8/index.html
+++ b/abinash/Template_8/Task_8/index.html
@@ -13,7 +13,7 @@
     <div class="margin1">
         <div class="bg_color2   font_f">
             <div class=" width margin  padding">
-                <div class="float_left width_left">
+                <div class="float_left width_left nofloat">
                     <div class=" border bg_color padding1 ">
                         <div class="float_left width_l1">
                             <img src="img1.jpeg" alt="" width="100%" height="80px">
@@ -25,7 +25,7 @@
                         <div style="clear: both;"></div>
                     </div>
                 </div>
-                <div class="float_right width_right"></div>
+                <div class="float_right width_right nofloat"></div>
                 <div style="clear: both;"></div>
             </div>
 
