--- a/vigneshwaran/flo/vi1.html
+++ b/vigneshwaran/flo/vi1.html
@@ -7,16 +7,15 @@
     <link rel="stylesheet" href="vi.css"/>
 </head>
 <body>
-    <div class="margin">
+    <div class="margin text1">
     <div class="padding baground margin1">page header</div>
     <div class="padding baground margin1">nav</div>
     <div class="wfl">
     <div class="padding baground">
         <div>article</div>
     <div class="baground1 margin2">
-        <div>article header</div>
-            <div class="padding4 margin3">main</div>
-        
+        <div class="margin">article header</div>
+            <div class="padding4 margin3">main</div>       
     </div>
     </div>
     </div>
