--- a/vigneshwaran/flo/vi2.html
+++ b/vigneshwaran/flo/vi2.html
@@ -7,30 +7,27 @@
     <link rel="stylesheet" href="vi.css"/>
 </head>
 <body>
-    <div class="margin">
+    <div class="margin text1">
     <div class="padding baground margin1">page header</div>
     <div class="padding baground margin1">nav</div>
     <div class="wfl">
     <div class="padding baground">
-        <div class="text">article</div>
+        <div class="text margin">article</div>
     <div class="baground1 margin2">
         <div>article header</div>
-            <div class="padding4 margin3">main</div>
-        
+            <div class="padding4 margin3">main</div>        
     </div>
     </div>
+    <div class="padding4 baground margin6">section</div>
     </div>
     <div class="wfr">
-        <div class="wfl1">
-        <div class="padding3 baground border1">aside</div>
-        </div>
-        <div class="wfr1">
-        <div class="padding3 baground border1">aside</div>
-        </div>
-    <div class="padding3 baground">aside</div>
+        <div class="padding7">
+        <div class="wfl1 baground">aside</div>
+        <div class="wfr1 baground">aside</div>
+        </div>        
+    <div class="padding6 baground margin6">aside</div>
     </div>
     <div style="clear: both;"></div>
-    <div class="padding2 baground margin1">section</div>
     <div class="padding baground margin1">footer</div>
     </div>
 </body>
