--- a/vigneshwaran/flo/vi.html
+++ b/vigneshwaran/flo/vi.html
@@ -7,15 +7,14 @@
     <link rel="stylesheet" href="vi.css"/>
 </head>
 <body>
-    <div class="margin">
+    <div class="margin text1">
     <div class="padding baground margin1">page header</div>
     <div class="padding baground margin1">nav</div>
     <div class="padding baground margin1">
         <div>article</div>
     <div class="baground1 margin2">
-        <div>article header</div>
-            <div class="padding1 border margin0">main</div>
-        
+        <div class="margin">article header</div>
+            <div class="padding4 margin3">main</div>        
     </div>
     </div>
     <div class="padding baground margin1">section</div>
