--- a/sarupriya/Task8/index.html
+++ b/sarupriya/Task8/index.html
@@ -8,6 +8,7 @@
     <script src="https://kit.fontawesome.com/a7222674db.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="margin_b">
         <div class="bg_color padding1 font_f">
@@ -44,13 +45,10 @@
                                 <div class=" width_b margin_a linespacing1 font_size4">
                                     This is where you place either you company slogan, motto, or any keyword rich
                                     information. This information will be the first 'content' that will be read by the
-                                    search engines, so
-                                    try to make it good ;-) Also keep in mind that this will be true for every page, so
-                                    it
-                                    might
-                                    be a good idea to change this area for each pages. You might say that this sectiion
-                                    is
-                                    strategically palced for that purpose, so use it carefully.
+                                    search engines, so try to make it good ;-) Also keep in mind that this will be true
+                                    for every page, so it might be a good idea to change this area for each pages. You
+                                    might say that this sectiion is strategically palced for that purpose, so use it
+                                    carefully.
                                 </div>
                             </div>
                         </div>
