--- a/vigneshwaran/flo/vi1.html
+++ b/vigneshwaran/flo/vi1.html
@@ -11,8 +11,8 @@
     <div class="padding baground margin1">page header</div>
     <div class="padding baground margin1">nav</div>
     <div class="wfl">
-    <div class="padding baground">
-        <div>article</div>
+    <div class="padding2 baground">
+        <div class="margin8">article</div>
     <div class="baground1 margin2">
         <div class="margin">article header</div>
             <div class="padding4 margin3">main</div>       
