--- a/vigneshwaran/flo/vi.html
+++ b/vigneshwaran/flo/vi.html
@@ -1,25 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="vi.css"/>
+    <link rel="stylesheet" href="vi.css" />
 </head>
+
 <body>
     <div class="margin text1">
-    <div class="padding baground margin1">page header</div>
-    <div class="padding baground margin1">nav</div>
-    <div class="padding baground margin1">
-        <div>article</div>
-    <div class="baground1 margin2">
-        <div class="margin">article header</div>
-            <div class="padding4 margin3">main</div>        
-    </div>
-    </div>
-    <div class="padding baground margin1">section</div>
-    <div class="padding baground margin1">aside</div>
-    <div class="padding baground margin1">footer</div>
+        <div class="padding baground margin1">page header</div>
+        <div class="padding baground margin1">nav</div>
+        <div class="padding2 baground margin1">
+           <div class="margin8">article</div>
+            <div class="baground1 margin2">
+                <div class="margin">article header</div>
+                <div class="padding4 margin3">main</div>
+            </div>
+        </div>
+        <div class="padding baground margin1">section</div>
+        <div class="padding baground margin1">aside</div>
+        <div class="padding baground margin1">footer</div>
     </div>
 </body>
+
 </html>
