--- a/vigneshwaran/web/web.html
+++ b/vigneshwaran/web/web.html
@@ -1,43 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="web.css">
     <title>Document</title>
-    <link rel="stylesheet" href="web.css" />
 </head>
-
 <body>
-    <div>
-        <div>
-            <div class="color padding tex-in">My web site</div>
+    <header class="bg_color border_head">
+        <div class="width_95 margin_auto">
+            <div class="margin">
+                <span class="font_style">My Website</span>
+            </div>
             <div>
-                <div class="color3">home page</div>
-                <div class="color4">about me</div>
-                <div class="color5">blog</div>
-                <div class="color5">pictures</div>
-                <div class="color5">contact</div>
+                <button style="background-color:  rgba(243, 91, 53, 0.801);">homepage</button><button>aboutme</button>
             </div>
         </div>
-        <div class="color2">
-            <div class="color1 tex-in">Welcome to my web site</div>
-            <div class="tex-in">Greetings & salutions</div>
-        </div>
-        <div class="wfl">
-        <div class="color3 padding tex-in">
-            <div>My web site @ 2010</div>
-            <div>all rights reserved.</div>
-            <div>email@domain.com</div>
-        </div>
-        </div>
-        <div class="wfr">
-            <div class="color3 padding0 tex-in">
-                <div>copyrights$links</div>
-                <div>Image @ Croatian National Tourist Board</div>
-            </div>
-        </div>
-    </div>
+    </header>
 </body>
-
 </html>
