--- a/vigneshwaran/web/web.html
+++ b/vigneshwaran/web/web.html
@@ -9,35 +9,66 @@
 </head>
 
 <body>
-    <div>
-        <div>
-            <div class="color padding tex-in">My web site</div>
-            <div>
-                <div class="color3">home page</div>
-                <div class="color4">about me</div>
-                <div class="color5">blog</div>
-                <div class="color5">pictures</div>
-                <div class="color5">contact</div>
+    <header>
+        <div class="">
+            <div class="border color">
+                <div class="padding tex-in font-style">My web site</div>
+                <div class="witdh-main">
+                    <button class="color3">home page</button>
+                    <button class="color4">about me</button>
+                    <button class="color5">blog</button>
+                    <button class="color5">pictures</button>
+                    <button class="color5">contact</button>
+                </div>
+            </div>
+            <div class="color2">
+                <div class="wfl1 padding1">
+                    <div class="color1 tex-in">
+                        <div class="">Welcome to my web site</div>
+                    </div>
+                    <div class="box witdh-main"></div>
+                    <div class="wfl2">
+                        <div class="box1 witdh-main1"></div>
+                    </div>
+                    <div class="wfr2">
+                        <div class="tex-in">Greetings & salutions</div>
+                    </div>
+                </div>
+                <div class="wfr1">
+                    <div class="box2">
+                        <div class="wfl1">
+                            <div class="font-style1">Who am I?</div>
+                            
+                        </div>
+                        <div class="wfr1">
+                            <div class="box3"><link src="men.jpg" alt="men image" height="100px" width="100%"></div>
+                        </div>
+                        <div class="font-style2">
+                            <p>Lorem ipsum dolor sitamet, consectetur ad-ipiscing elit. phasellus Lorem ipsum dolor
+                                sit amet, consectetur adipiscing elit. phasellus fermentum facilisis lorem quis
+                                convallis. Donec id ipsum massa, sed tristique elit. Quisque eu lorem dui. Etiam
+                                tellus justo, hendrerit et lacinia a, viverra ut odio.</p>
+                        </div>
+                        <div style="clear: both;"></div>
+                    </div>
+                </div>
+                <div style="clear: both;"></div>
+            </div>
+            <div class="wfl">
+                <div class="color3 padding tex-in">
+                    <div>My web site @ 2010</div>
+                    <div>all rights reserved.</div>
+                    <div>email@domain.com</div>
+                </div>
+            </div>
+            <div class="wfr">
+                <div class="color3 padding0 tex-in">
+                    <div>copyrights$links</div>
+                    <div>Image @ Croatian National Tourist Board</div>
+                </div>
             </div>
         </div>
-        <div class="color2">
-            <div class="color1 tex-in">Welcome to my web site</div>
-            <div class="tex-in">Greetings & salutions</div>
-        </div>
-        <div class="wfl">
-        <div class="color3 padding tex-in">
-            <div>My web site @ 2010</div>
-            <div>all rights reserved.</div>
-            <div>email@domain.com</div>
-        </div>
-        </div>
-        <div class="wfr">
-            <div class="color3 padding0 tex-in">
-                <div>copyrights$links</div>
-                <div>Image @ Croatian National Tourist Board</div>
-            </div>
-        </div>
-    </div>
+    </header>
 </body>
 
 </html>
