--- a/vigneshwaran/web/web.html
+++ b/vigneshwaran/web/web.html
@@ -38,10 +38,12 @@
                     <div class="box2">
                         <div class="wfl1">
                             <div class="font-style1">Who am I?</div>
-                            
+
                         </div>
                         <div class="wfr1">
-                            <div class="box3"><link src="men.jpg" alt="men image" height="100px" width="100%"></div>
+                            <div class="box3">
+                                <img src="men.jpg" alt="men image" height="100px" width="100%">
+                            </div>
                         </div>
                         <div class="font-style2">
                             <p>Lorem ipsum dolor sitamet, consectetur ad-ipiscing elit. phasellus Lorem ipsum dolor
