--- a/vigneshwaran/web/web.html
+++ b/vigneshwaran/web/web.html
@@ -6,71 +6,110 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="web.css" />
+    <script src="https://kit.fontawesome.com/cb494cc880.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <header>
-        <div class="">
-            <div class="border color">
-                <div class="padding tex-in font-style">My web site</div>
-                <div class="witdh-main">
-                    <button class="color3">home page</button>
-                    <button class="color4">about me</button>
-                    <button class="color5">blog</button>
-                    <button class="color5">pictures</button>
-                    <button class="color5">contact</button>
+    <div class="">
+        <div class="border color">
+            <div class="padding tex-in font-style">My web site</div>
+            <div class="witdh-main">
+                <button class="color3">home page</button>
+                <button class="color4">about me</button>
+                <button class="color5">blog</button>
+                <button class="color5">pictures</button>
+                <button class="color5">contact</button>
+            </div>
+        </div>
+        <div class="color2 padding1">
+            <div class="wfl1 padding1">
+                <div class="color1 tex-in">
+                    <div class="witdh-main">Welcome to my web site</div>
+                </div>
+                <div class="box witdh-main"></div>
+                <div class="wfl2">
+                    <div class="box1 witdh-main1"></div>
+                </div>
+                <div class="wfr2">
+                    <div class="witdh-main">
+                        <div class="tex-in font-style4">Greetings & salutions</div>
+                        <div class="font-style3">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris feugiat, eros vel
+                                commodo consequat, neque ligula fermentum sem, quis elementum quam lectus aget orci.
+                                Quisque sagittis gravida ligula, nec congue ligue ligula pellen-tesque suscipit.
+                                Curabitur puivinar aliquam libero et suscipit Donec pellentesque consecteture ante,
+                                a viverra quam lonortis facillisis.</p>
+                            <span>
+                                <p>Suspendisse semper arcu ut urna sodales dignissim at vel felis. Vestibulum non
+                                    odio nulla, nec laoreet dolor. in at dui a ipsum ullamcorper colutpat.</p>
+                            </span>
+                        </div>
+                        <div class="font-style7">read more</div>
+                    </div>
                 </div>
             </div>
-            <div class="color2">
-                <div class="wfl1 padding1">
-                    <div class="color1 tex-in">
-                        <div class="">Welcome to my web site</div>
-                    </div>
-                    <div class="box witdh-main"></div>
-                    <div class="wfl2">
-                        <div class="box1 witdh-main1"></div>
-                    </div>
-                    <div class="wfr2">
-                        <div class="tex-in">Greetings & salutions</div>
-                    </div>
-                </div>
-                <div class="wfr1">
+            <div class="wfr1">
+                <div class="witdh-main">
                     <div class="box2">
-                        <div class="wfl1">
-                            <div class="font-style1">Who am I?</div>
-
-                        </div>
-                        <div class="wfr1">
-                            <div class="box3">
-                                <img src="men.jpg" alt="men image" height="100px" width="100%">
+                        <div class="witdh-main">
+                            <div class="wfl3">
+                                <div class="font-style1">Who am I?</div>
                             </div>
-                        </div>
-                        <div class="font-style2">
-                            <p>Lorem ipsum dolor sitamet, consectetur ad-ipiscing elit. phasellus Lorem ipsum dolor
-                                sit amet, consectetur adipiscing elit. phasellus fermentum facilisis lorem quis
-                                convallis. Donec id ipsum massa, sed tristique elit. Quisque eu lorem dui. Etiam
-                                tellus justo, hendrerit et lacinia a, viverra ut odio.</p>
+                            <div class="wfr3">
+                                <div class="box3">
+                                    <img src="men.jpg" alt="men image" height="50px" width="50%">
+                                </div>
+                            </div>
+                            <div class="font-style2">
+                                <p>Lorem ipsum dolor sitamet, consectetur ad-ipiscing elit. phasellus Lorem ipsum dolor
+                                    sit amet, consectetur adipiscing elit. phasellus fermentum facilisis lorem quis
+                                    convallis. Donec id ipsum massa, sed tristique elit. Quisque eu lorem dui. Etiam
+                                    tellus justo, hendrerit et lacinia a, viverra ut odio.</p>
+                            </div>
                         </div>
                         <div style="clear: both;"></div>
                     </div>
+                    <div class="box2">
+                        <div class="witdh-main">
+                            <div class="font-style1">Image Categories</div>
+                            <div class="font-style5">
+                                <li>Nature</li>
+                                <li>Coastal</li>
+                                <li>Cities</li>
+                                <li>Arts & Crafts</li>
+                                <li>Panoramic images</li>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="witdh-main">
+                        <div class="font-style6">
+                            <button1 class="feet"><i class="fa-solid fa-rss"></button1></i>Subscribe to my feed
+                        </div>
+                        <div class="font-style6">
+                            <button1 class="tweet"><i class="fa-brands fa-x-twitter"></button1></i>Follow me on Twitter
+                        </div>
+                        <div class="font-style6">
+                            <button1 class="face"><i class="fa-brands fa-facebook"></button1></i>Contact me on Facebook
+                        </div>
+                    </div>
                 </div>
-                <div style="clear: both;"></div>
             </div>
-            <div class="wfl">
-                <div class="color3 padding tex-in">
-                    <div>My web site @ 2010</div>
-                    <div>all rights reserved.</div>
-                    <div>email@domain.com</div>
-                </div>
-            </div>
-            <div class="wfr">
-                <div class="color3 padding0 tex-in">
-                    <div>copyrights$links</div>
-                    <div>Image @ Croatian National Tourist Board</div>
-                </div>
+            <div style="clear: both;"></div>
+        </div>
+        <div class="wfl">
+            <div class="color3 padding tex-in">
+                <div class="font-style8">My web site @ 2010</div>
+                <div class="font-style9">all rights reserved.</div>
+                <div class="font-style10">email@domain.com</div>
             </div>
         </div>
-    </header>
+        <div class="wfr">
+            <div class="color3 padding0 widths">
+                <div class="font-style8">copyrights$links</div>
+                <div class="font-style9">Image @ Croatian National Tourist Board</div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
