--- a/vigneshwaran/web/web.html
+++ b/vigneshwaran/web/web.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div class="">
+    <div>
         <div class="border color">
             <div class="padding tex-in font-style">My web site</div>
             <div class="witdh-main">
@@ -21,9 +21,9 @@
                 <button class="color5">contact</button>
             </div>
         </div>
-        <div class="color2 padding1">
+        <div class="color2 padding2">
             <div class="wfl1 padding1">
-                <div class="color1 tex-in">
+                <div class="color1 font-style11">
                     <div class="witdh-main">Welcome to my web site</div>
                 </div>
                 <div class="box witdh-main"></div>
@@ -32,7 +32,7 @@
                 </div>
                 <div class="wfr2">
                     <div class="witdh-main">
-                        <div class="tex-in font-style4">Greetings & salutions</div>
+                        <div class="tex-in font-style4 padding1">Greetings & salutions</div>
                         <div class="font-style3">
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris feugiat, eros vel
                                 commodo consequat, neque ligula fermentum sem, quis elementum quam lectus aget orci.
@@ -53,11 +53,11 @@
                     <div class="box2">
                         <div class="witdh-main">
                             <div class="wfl3">
-                                <div class="font-style1">Who am I?</div>
+                                <div class="font-style1 padding1">Who am I?</div>
                             </div>
                             <div class="wfr3">
                                 <div class="box3">
-                                    <img src="men.jpg" alt="men image" height="50px" width="50%">
+                                    <img src="men.jpg" alt="men image" height="100px" width="100%">
                                 </div>
                             </div>
                             <div class="font-style2">
@@ -71,7 +71,7 @@
                     </div>
                     <div class="box2">
                         <div class="witdh-main">
-                            <div class="font-style1">Image Categories</div>
+                            <div class="font-style1 padding1">Image Categories</div>
                             <div class="font-style5">
                                 <li>Nature</li>
                                 <li>Coastal</li>
@@ -104,9 +104,11 @@
             </div>
         </div>
         <div class="wfr">
-            <div class="color3 padding0 widths">
-                <div class="font-style8">copyrights$links</div>
-                <div class="font-style9">Image @ Croatian National Tourist Board</div>
+            <div class="color3 padding0">
+                <div class="wid">
+                    <div class="font-style8">copyrights$links</div>
+                    <div class="font-style9">Image @ Croatian National Tourist Board</div>
+                </div>
             </div>
         </div>
     </div>
