--- a/abinash/Template_8/Task_8/index.html
+++ b/abinash/Template_8/Task_8/index.html
@@ -40,7 +40,7 @@
     <div class="bg_color2 ">
         <div class="margin1">
             <div class="width margin">
-                <div class="float_left width_left">
+                <div class="float_left width_left nofloat">
                     <div class="border4 bg_color padding3">
                         <div class=" width_a margin border3 ">
                             <div class=" width_b margin font_s3 bg_color linespacing ">
@@ -52,15 +52,15 @@
                             </div>
                         </div>
                         <div class="width_a margin padding4 font_f">
-                            <div class="font_s4 font_c2 padding5">
+                            <div class="font_s4 font_c2 padding5  ">
                                 <i class="fa-solid fa-right-long font_s5"></i>
                                 Home
                             </div>
-                            <div class="font_s4 font_c2 padding5  ">
+                            <div class="font_s4 font_c2 padding5 ">
                                 <i class="fa-solid fa-right-long font_s5"></i>
                                 About Us
                             </div>
-                            <div class="font_s4 font_c2 padding5  ">
+                            <div class="font_s4 font_c2 padding5 ">
                                 <i class="fa-solid fa-right-long font_s5"></i>
                                 Services
                             </div>
@@ -68,7 +68,7 @@
                                 <i class="fa-solid fa-right-long font_s5 "></i>
                                 Portfolio
                             </div>
-                            <div class="font_s4 font_c2 padding5">
+                            <div class="font_s4 font_c2 padding9  ">
                                 <i class="fa-solid fa-right-long font_s5"></i>
                                 Web Programming
                             </div>
@@ -76,7 +76,7 @@
                     </div>
                 </div>
 
-                <div class="float_right width_right">
+                <div class="float_right width_right nofloat">
                     <div class="width margin">
                         <div class="border_5 margin_t bg_color">
                             <div class="">
@@ -90,14 +90,14 @@
                                     you are using comments, also include the comments div.)
                                 </div>
                                 <div class="font_c2 font margin_l">Comments (1)</div>
-                                <h1 class="txt padding8 width margin  font_s7">A Second H1 Tag</h1>
+                                <h1 class="txt padding8 width margin font_f font_s7">A Second H1 Tag</h1>
                                 <div class="width_b margin linespacing1   font_s3   padding7">
                                     You can include all of ypur content in one of these boxes,spread it out between many
                                     boxes, list one title per box, or many titles per box. Feel free to use this
                                     template anywhere you'd like, but please leave the link back to me. 
                                 </div>
                                 <div class="font_c2 font margin_l">Comments (5)</div>
-                                <h1 class="txt padding8 width margin  font_s7">A Third H1 Tag</h1>
+                                <h1 class="txt padding8 width margin font_f font_s7">A Third H1 Tag</h1>
                                 <div class="width_b margin linespacing1   font_s3   padding7">
                                     You can include all of ypur content in one of these boxes,spread it out between many
                                     boxes, list one title per box, or many titles per box. Feel free to use this
