--- a/abinash/Task_7/index.html
+++ b/abinash/Task_7/index.html
@@ -21,10 +21,10 @@
                 <span><a class="button text_align font_c1 border">Contact Us</a></span>
             </div>
             <div class="bg_color3 font_color margin1">
-                <div class="float_left width_left">
+                <div class="float_left width_left nofloat">
                     <img src="img1.png" alt="paper rocket" width="100%" height="200px">
                 </div>
-                <div class="float_right width_right">
+                <div class="float_right width_right nofloat">
                     <div class="padding3">
                         <div class="font_s3">About <br></div>
                         <div class="padding4 font_s4">
@@ -37,7 +37,7 @@
                 <div style="clear: both;"></div>
             </div>
             <div>
-                <div class="float_left width_l1">
+                <div class="float_left width_l1 nofloat">
                     <div class=" bg_color4 font_color">
                         <div class="padding5 ">
                             <div class="width_a margin">
@@ -49,7 +49,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="float_right width_r1">
+                <div class="float_right width_r1 nofloat">
                     <div class="bg_color5">
                         <div class="width_b margin ">
                             <div class="padding6 font_s5 font_c2">How We Work</div>
