--- a/vigneshwaran/web/web.html
+++ b/vigneshwaran/web/web.html
@@ -35,7 +35,7 @@
                 <div class="wfr2">
                     <div class="witdh-main">
                         <div class="tex-in font-style4 padding1">Greetings & salutions</div>
-                        <div class="font-style2">
+                        <div class="font-style2 line">
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris feugiat, eros vel
                                 commodo consequat, neque ligula fermentum sem, quis elementum quam lectus aget orci.
                                 Quisque sagittis gravida ligula, nec congue ligue ligula pellen-tesque suscipit.
@@ -71,6 +71,7 @@
                         </div>
                         <div style="clear: both;"></div>
                     </div>
+                    <div class="padding4">
                     <div class="box2">
                         <div class="witdh-main">
                             <div class="font-style1 padding1">Image Categories</div>
@@ -82,8 +83,8 @@
                                 <li>Panoramic images</li>
                             </div>
                         </div>
-                    </div>
-                    <div class="font-style6">
+                    </div></div>
+                    <div class="font-style6 padding3">
                         <button1 class="feet"><i class="fa-solid fa-rss"></button1></i>Subscribe to my feed
                     </div>
                     <div class="font-style6">
