--- a/home.html
+++ b/home.html
@@ -3,18 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sample</title>
     <link rel="stylesheet" href="style1.css">
-   
 </head>
-<body>
-    <div class="font_size border margin txt_center padding">head</div>
-    <div class="font_size border margin txt_center padding">nav</div>
-    <div class="font_size padding">
-        <div class="float_left width txt_center border">LEFT</div>
-        <div class="float_right width txt_center border">RIGHT</div>
-        <div style="clear: both;"></div>
-    </div>
-    <div class="font_size border txt_center padding">footer</div>
+<body class="bg">
+   
+    <div class="align_text border margin padding bg_color" id="">Header</div>
+    <div class="align_text border margin padding bg_color">Navigation</div>
+    <div class="align_text border margin padding bg_color">Content</div>
+    <div class="align_text border padding bg_color">Footer</div>
+  
 </body>
 </html>
