update file for php

--- a/abinash/Template_8/Task_8/index.html
+++ b/abinash/Template_8/Task_8/index.html
@@ -40,7 +40,7 @@
     <div class="bg_color2 ">
         <div class="margin1">
             <div class="width margin">
-                <div class="float_left width_left">
+                <div class="float_left width_left nofloat">
                     <div class="border4 bg_color padding3">
                         <div class=" width_a margin border3 ">
                             <div class=" width_b margin font_s3 bg_color linespacing ">
@@ -76,7 +76,7 @@
                     </div>
                 </div>
 
-                <div class="float_right width_right">
+                <div class="float_right width_right nofloat">
                     <div class="width margin">
                         <div class="border_5 margin_t bg_color">
                             <div class="">
