--- a/abinash/Task_7/index.html
+++ b/abinash/Task_7/index.html
@@ -11,20 +11,43 @@
 <body>
     <div class="bg_color1">
         <div class="">
-            <div class="font_s1 padding1 font_color">Your Logo
-                <span class="font_s2 font_c3">Using a single layout to create several different looks</span>
+            <div
+                class="font_s1 padding1 font_color text_align1 text_align2 text_align3 dis_block1 dis_block2 dis_block3">
+                Your Logo
+                <span class="font_s2 font_c3 dis_block1 dis_block2 dis_block3">Using a single layout to create several
+                    different looks</span>
             </div>
-            <div class="padding2 bg_color2 margin1">
-                <span><a class="button text_align font_c1 border">Home</a></span>
-                <span><a class="button text_align font_color border">About</a></span>
-                <span><a class="button text_align font_c1 border">Services</a></span>
-                <span><a class="button text_align font_c1 border">Contact Us</a></span>
+            <div class="padding2 bg_color2 margin1 text_align1 text_align2  text_align3">
+
+                <span class="dis_block1 dis_block2  dis_block3">
+                    <a class="button text_align font_c1 border  border_r1 border_r2  border_r3">Home</a>
+                </span>
+
+
+
+                <span class="dis_block1 dis_block2  dis_block3">
+                    <a class="button text_align font_color border  border_r1 border_r2  border_r3 ">About</a>
+                </span>
+
+
+
+                <span class="dis_block1 dis_block2 dis_block3 ">
+                    <a class="button text_align font_c1 border  border_r1 border_r2  border_r3 ">Services</a>
+                </span>
+
+
+
+                <span class="dis_block1 dis_block2 dis_block3 ">
+                    <a class="button text_align font_c1 border  border_r1 border_r2 border_r3 ">Contact Us</a>
+                </span>
+
+
             </div>
             <div class="bg_color3 font_color margin1">
-                <div class="float_left width_left nofloat">
+                <div class="float_left width_left nofloat nofloat_l1 nofloat_l2 nofloat_l3">
                     <img src="img1.png" alt="paper rocket" width="100%" height="200px">
                 </div>
-                <div class="float_right width_right nofloat">
+                <div class="float_right width_right nofloat nofloat1 nofloat2 nofloat3">
                     <div class="padding3">
                         <div class="font_s3">About <br></div>
                         <div class="padding4 font_s4">
@@ -37,7 +60,7 @@
                 <div style="clear: both;"></div>
             </div>
             <div>
-                <div class="float_left width_l1 nofloat">
+                <div class="float_left width_l1 nofloat nofloat1 nofloat2 nofloat3">
                     <div class=" bg_color4 font_color">
                         <div class="padding5 ">
                             <div class="width_a margin">
@@ -49,7 +72,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="float_right width_r1 nofloat">
+                <div class="float_right width_r1 nofloat nofloat1 nofloat2 nofloat3">
                     <div class="bg_color5">
                         <div class="width_b margin ">
                             <div class="padding6 font_s5 font_c2">How We Work</div>
@@ -91,7 +114,7 @@
                                 fugit. Dolor maiores molestiae a laudantium optio doloremque aliquam.
                             </div>
                         </div>
-                        
+
                     </div>
                 </div>
                 <div style="clear: both;"></div>
