--- a/janani/temp 2/index.html
+++ b/janani/temp 2/index.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="font_size margin txt_center border padding">header</div>
+    <div class="font_size margin txt_center border padding bg_color">header</div>
     <div class="font_size margin ">
         <div class="float_left width txt_center border padding2">sidebar</div>
     <div class="font_size margin">
         <div class="float_right width txt_center border padding3">content</div>
         <div style="clear: both;"></div>
     </div>
-    <div class="font_size margin txt_center border padding">footer</div>
+    <div class="font_size margin txt_center border padding">footer<br> <span class="">89899</span></div>
 </body>
 </html>
