--- a/janani/temp 2/index.html
+++ b/janani/temp 2/index.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="font_size margin txt_center border padding">header</div>
-    <div class="font_size margin ">
-        <div class="float_left width txt_center border padding2">sidebar</div>
+    <div class="font_size margin txt_center border padding bg_color font_color">header<br><span class="font_size2">980x140</span></div>
     <div class="font_size margin">
-        <div class="float_right width txt_center border padding3">content</div>
+        <div class="float_left width txt_center border padding2 bg_color font_color">sidebar<br><span class="font_size2">270x450</span></div>
+    <div class="font_size margin">
+        <div class="float_right width txt_center border padding3 bg_color font_color">content<br><span class="font_size2">690x450</span></div>
         <div style="clear: both;"></div>
     </div>
-    <div class="font_size margin txt_center border padding">footer</div>
+    <div class="font_size margin txt_center border padding bg_color font_color">footer<br><span class="font_size2">980x70</span></div>
 </body>
 </html>
