--- a/abinash/Task_7/index.html
+++ b/abinash/Task_7/index.html
@@ -22,9 +22,6 @@
                 <span class="dis_block1 dis_block2  dis_block3">
                     <a class="button text_align font_c1 border  border_r1 border_r2  border_r3">Home</a>
                 </span>
-
-
-
                 <span class="dis_block1 dis_block2  dis_block3">
                     <a class="button text_align font_color border  border_r1 border_r2  border_r3 ">About</a>
                 </span>
@@ -44,8 +41,8 @@
 
             </div>
             <div class="bg_color3 font_color margin1">
-                <div class="float_left width_left nofloat nofloat_l1 nofloat_l2 nofloat_l3">
-                    <img src="img1.png" alt="paper rocket" width="100%" height="200px">
+                <div class="float_left width_left nofloat nofloat_l1 nofloat_l2 nofloat_l3 align_img">
+                    <img src="img1.png" alt="paper rocket" class="img_prop">
                 </div>
                 <div class="float_right width_right nofloat nofloat1 nofloat2 nofloat3">
                     <div class="padding3">
