--- a/vigneshwaran/template-6/index.html
+++ b/vigneshwaran/template-6/index.html
@@ -10,14 +10,17 @@
 </head>
 
 <body>
-    <div class="">
-        <div class="wfl bg-color">
-            <div class="wfl1">
-                <img src="gits.jpeg" alt="guitar" height="91px" width="100%">
+    
+        <div>
+            <div class="wfl bg-color">
+                <div class="wfl1">
+                    <img src="gits.jpeg" alt="guitar" height="91px" width="100%">
+                </div>
+                <div class="wfr1">
+                    <div class="fond-style">SoundAMP</div>
+                </div>
             </div>
-            <div class="wfr1">
-                <div class="fond-style">SoundAMP</div>
-            </div>
+            <div style="clear: both;"></div>
         </div>
         <div class="wfr bg-color">
             <button>HTML Templates<i class="fa-solid fa-sort-down"></i></button>
@@ -87,7 +90,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    
 </body>
 
 </html>
